# vcmi

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.linux  .travis.mxe  .travis.osx  .travis.yml  1base+l  AI_Base.h  ARTEVENT.TXT  ARTRAITS.TXT  AUTHORS  AUTHORS.h  AdventureMapButton.cpp  AdventureMapButton.h  CAbilityHandler.cpp  CAbilityHandler.h  CAdvmapInterface.cpp  CAdvmapInterface.h  CAmbarCendamo.cpp  CAmbarCendamo.h  CArtHandler.cpp  CArtHandler.h  CBattleInterface.cpp  CBattleInterface.h  CBuildingHandler.cpp  CBuildingHandler.h  CCallback.cpp  CCallback.h  CCastleHandler.h  CCastleInterface.cpp  CCastleInterface.h  CConsoleHandler.cpp  CConsoleHandler.h  CCreatureHandler.cpp  (+150 more)
AI/: CMakeLists.txt  FuzzyLite.cbp  GeniusAI.brain  Makefile.am  Makefile.in
AI/BattleAI/: AttackPossibility.cpp  AttackPossibility.h  BattleAI.cbp  BattleAI.cpp  BattleAI.h  BattleAI.vcxproj  BattleEvaluator.cpp  BattleEvaluator.h  BattleExchangeVariant.cpp  BattleExchangeVariant.h  CMakeLists.txt  EnemyInfo.cpp  EnemyInfo.h  Makefile.am  Makefile.in  PossibleSpellcast.cpp  PossibleSpellcast.h  PotentialTargets.cpp  StdInc.cpp  (+11 more)
client/: AdventureMapButton.cpp  AdventureMapButton.h  AdventureMapClasses.cpp  AdventureMapClasses.h  AntilagServer.cpp  AntilagServer.h  ArtifactsUIController.cpp  ArtifactsUIController.h  Autoupdate.mm  CAdvmapInterface.cpp  CAdvmapInterface.h  CAnimation.cpp  CAnimation.h  CBattleInterface.cpp  CBattleInterface.h  CBitmapHandler.cpp  CBitmapHandler.h  CCastleInterface.cpp  CCastleInterface.h  CConfigHandler.cpp  CConfigHandler.h  CCreatureAnimation.cpp  CCreatureAnimation.h  CCreatureWindow.cpp  CCreatureWindow.h  CCursorHandler.cpp  CCursorHandler.h  CDefHandler.cpp  CDefHandler.h  CFocusableHelper.cpp  CFocusableHelper.h  CGameInfo.cpp  CGameInfo.h  CHeroWindow.cpp  CHeroWindow.h  CKingdomInterface.cpp  CKingdomInterface.h  CMT.cpp  CMT.h  CMakeLists.txt  (+83 more)
clientapp/: CFocusableHelper.cpp  CMakeLists.txt  EntryPoint.cpp  VCMI_client.rc
editor/: CMakeLists.txt  ConfigWindows.h  Editor.cpp  Editor.h  Editor.vcxproj  Main.cpp  StdInc.h
gear-connector-api/: Cargo.toml
launcher/: CMakeLists.txt  StdInc.h  VCMI_launcher.cbp  VCMI_launcher.mingw.rc  VCMI_launcher.rc  VCMI_launcher.vcxproj  demo.cpp  demo.h  eu.vcmi.VCMI.metainfo.xml  helper.cpp  helper.h  innoextract.cpp  innoextract.h  jsonutils.cpp  jsonutils.h  languages.cpp  languages.h  launcherdirs.cpp  launcherdirs.h  main.cpp  main.h  mainwindow.cpp  mainwindow.ui  mainwindow_moc.cpp  mainwindow_moc.h  mainwindow_moc.ui  prepare.cpp  prepare.h  prepare_android.cpp  prepare_ios.mm  prepare_p.h  proxyServer.py  resources.qrc  sdlHandler.cpp  sdlHandler.h  sdldisplayquery.cpp  sdldisplayquery.h  updatedialog_moc.cpp  updatedialog_moc.h  updatedialog_moc.ui  (+3 more)
lib/: AI_Base.h  AndroidVMHelper.cpp  AndroidVMHelper.h  ArtifactUtils.cpp  ArtifactUtils.h  AsyncRunner.h  BasicTypes.cpp  BattleAction.cpp  BattleAction.h  BattleFieldHandler.cpp  BattleFieldHandler.h  BattleHex.cpp  BattleHex.h  BattleInfo.cpp  BattleInfo.h  BattleState.cpp  BattleState.h  CAndroidVMHelper.cpp  CAndroidVMHelper.h  CArtHandler.cpp  CArtHandler.h  CArtifactInstance.cpp  CArtifactInstance.h  CArtifactSet.h  CBattleCallback.cpp  CBattleCallback.h  CBonusTypeHandler.cpp  CBonusTypeHandler.h  CBuildingHandler.cpp  CBuildingHandler.h  CCampaignHandler.cpp  CCampaignHandler.h  CConfigHandler.cpp  CConfigHandler.h  CConsoleHandler.cpp  CConsoleHandler.h  CCreatureHandler.cpp  CCreatureHandler.h  CCreatureSet.cpp  CCreatureSet.h  (+183 more)
lobby/: CMakeLists.txt  EntryPoint.cpp  HttpApiServer.cpp  HttpApiServer.h  LobbyDatabase.cpp  LobbyDatabase.h  LobbyDefines.h  LobbyServer.cpp  LobbyServer.h  SQLiteConnection.cpp  SQLiteConnection.h  StdInc.cpp
mapeditor/: Animation.cpp  Animation.h  BitmapHandler.cpp  BitmapHandler.h  CGameInfo.cpp  CGameInfo.h  CMakeLists.txt  EditorCallback.cpp  EditorCallback.h  PlayerSelectionDialog.cpp  PlayerSelectionDialog.h  PlayerSettingsDialog.cpp  PlayerSettingsDialog.h  PlayerSettingsDialog.ui  StdInc.cpp  StdInc.h  VCMI_launcher.rc  armywidget.cpp  generatorprogress.cpp  generatorprogress.h  generatorprogress.ui  graphics.cpp  graphics.h  helper.cpp  helper.h  inspector.cpp  inspector.h  jsonutils.cpp  jsonutils.h  launcherdirs.cpp  launcherdirs.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapcontroller.cpp  mapcontroller.h  mapeditor.rc  mapeditorroles.h  maphandler.cpp  (+32 more)
osx/: CMakeLists.txt  DS_Store_Setup.scpt  Info.plist.in  dmg_DS_Store  dmg_background.psd  download_dependencies.sh  generate_icns.sh  package.sh  sparkle_appcast.xml  sparkle_release_notes.html  vcmi.icns  vcmi_dsa_public.pem
rust_vcmi/: Cargo.toml
server/: BattleProcessor.cpp  BattleProcessor.h  CGameHandler.cpp  CGameHandler.h  CMakeLists.txt  CQuery.cpp  CQuery.h  CScriptCallback.cpp  CScriptCallback.h  CVCMIServer.cpp  CVCMIServer.h  EntryPoint.cpp  GlobalLobbyProcessor.cpp  GlobalLobbyProcessor.h  HeroPoolProcessor.cpp  HeroPoolProcessor.h  IGameServer.h  LobbyNetPackVisitors.h  Makefile.am  Makefile.in  NetPacksLobbyServer.cpp  NetPacksServer.cpp  PlayerMessageProcessor.cpp  PlayerMessageProcessor.h  ServerDiscoveryListener.cpp  ServerDiscoveryListener.h  ServerNetPackVisitors.h  ServerSpellCastEnvironment.cpp  ServerSpellCastEnvironment.h  StdInc.h  TurnTimerHandler.cpp  TurnTimerHandler.h  VCMI_server.cbp  VCMI_server.vcproj  VCMI_server.vcxproj  main_ios.mm  server_main.cpp  stdafx.h
serverapp/: CMakeLists.txt  EntryPoint.cpp
test/: Battlefield.cpp  CMakeLists.txt  CMapEditManagerTest.cpp  CMapFormatTest.cpp  CMemoryBufferTest.cpp  CTextOperationsTest.cpp  CVcmiTestConfig.cpp  CVcmiTestConfig.h  JsonComparer.cpp  JsonComparer.h  MapComparer.cpp  MapComparer.h  StdInc.cpp  StdInc.h  TerrainViewTest.h3m  Test.cbp  Test.vcxproj  Test.vcxproj.filters  main.cpp  terrainViewMappings.json
vcmiqt/: CMakeLists.txt  MessageBox.h  StdInc.h  convpathqstring.h  jsonutils.cpp  jsonutils.h  launcherdirs.cpp  launcherdirs.h  vcmiqt.h
win/: CMakeLists.txt
(+4823 files in other folders)
